[package]
name = "lumos-curve25519"
description = "Lumos Curve25519 Syscalls"

version = "0.0.1"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos-curve25519"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck", features = ["derive"] }
bytemuck-derive = { git = "https://github.com/gaokanxu/bytemuck.git", branch = "main", package = "bytemuck_derive" }
thiserror = "1.0.63"

curve25519-dalek = { path="../curve25519-dalek/curve25519-dalek", features = ["serde"] }

